--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,15 +9,17 @@
 <body>
 <div class="container">
 
+  <!-- Header -->
   <div class="header">
     <h1>Vinter OL 2026</h1>
   </div>
 
+  <!-- Status/fejl-beskeder -->
   <div id="statusBox" class="status hidden"></div>
 
   <div class="grid">
 
-    <!-- CREATE NATION -->
+    <!-- Opret nation -->
     <section class="card">
       <h2>Opret nation</h2>
       <div class="row">
@@ -26,7 +28,7 @@
       </div>
     </section>
 
-    <!-- CREATE SKIER (POST /skiers) -->
+    <!-- Opret løber (POST /skiers) -->
     <section class="card">
       <h2>Opret løber</h2>
       <div class="row">
@@ -36,7 +38,7 @@
       </div>
     </section>
 
-    <!-- UPDATE + DELETE SKIER (PUT + DELETE /skiers/{id}) -->
+    <!-- Opdater / Slet løber (PUT + DELETE /skiers/{id}) -->
     <section class="card">
       <h2>Opdater / Slet løber</h2>
       <div class="row">
@@ -48,7 +50,7 @@
       </div>
     </section>
 
-    <!-- CREATE COMPETITION -->
+    <!-- Opret konkurrence -->
     <section class="card">
       <h2>Opret konkurrence</h2>
       <div class="row">
@@ -58,7 +60,7 @@
       </div>
     </section>
 
-    <!-- CREATE RUN -->
+    <!-- Opret run i konkurrence -->
     <section class="card">
       <h2>Opret run i konkurrence</h2>
       <div class="row">
@@ -68,7 +70,7 @@
       </div>
     </section>
 
-    <!-- CREATE RESULT -->
+    <!-- Registrér resultat (POST /results) -->
     <section class="card span-2">
       <h2>Registrér resultat</h2>
       <div class="row" style="margin-bottom: 10px;">
@@ -82,7 +84,7 @@
       </div>
     </section>
 
-    <!-- VIEW COMPETITIONS -->
+    <!-- Vis konkurrencer -->
     <section class="card">
       <h2>Konkurrencer</h2>
       <div class="row">
@@ -91,7 +93,7 @@
       <ul id="competitionList" class="list"></ul>
     </section>
 
-    <!-- VIEW LEADERBOARD -->
+    <!-- Vis leaderboard -->
     <section class="card">
       <h2>Leaderboard</h2>
       <table>
@@ -107,7 +109,7 @@
       </table>
     </section>
 
-    <!-- VIEW NATION SKIERS -->
+    <!-- Vis løbere for en nation -->
     <section class="card">
       <h2>Nationer og deres løbere</h2>
       <div class="row">
@@ -117,13 +119,18 @@
       <ul id="skierList" class="list"></ul>
     </section>
 
-    <!-- VIEW RUN RESULTS -->
+    <!-- Vis resultater + hurtigste løber for et run -->
     <section class="card">
       <h2>Resultater for et run</h2>
+
       <div class="row">
         <select id="runSelectForView"></select>
-        <button class="secondary" onclick="loadResultsForSelectedRun()">Load</button>
+        <button class="secondary" onclick="loadResultsForSelectedRun()">Load Results</button>
+        <button class="secondary" onclick="loadFastestForSelectedRun()">Load Fastest</button>
       </div>
+
+      <!-- Her viser vi hurtigste løber -->
+      <div id="fastestBox" class="status hidden"></div>
 
       <table>
         <thead>
@@ -140,6 +147,7 @@
   </div>
 </div>
 
+<!-- JavaScript til hele UI (fetch, dropdowns, create/update/delete osv.) -->
 <script src="/js/app.js"></script>
 </body>
 </html>
