--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,11 +10,11 @@
 <div class="container">
 
   <!-- Header -->
-  <div class="header">
+  <header class="header">
     <h1>Vinter OL 2026</h1>
-  </div>
+  </header>
 
-  <!-- Status/fejl-beskeder -->
+  <!-- Status og fejlbeskeder -->
   <div id="statusBox" class="status hidden"></div>
 
   <div class="grid">
@@ -23,27 +23,27 @@
     <section class="card">
       <h2>Opret nation</h2>
       <div class="row">
-        <input type="text" id="nationNameInput" placeholder="Nation name">
+        <input id="nationNameInput" type="text" placeholder="Nation name">
         <button onclick="createNation()">Create</button>
       </div>
     </section>
 
-    <!-- Opret løber (POST /skiers) -->
+    <!-- Opret løber -->
     <section class="card">
       <h2>Opret løber</h2>
       <div class="row">
-        <input type="text" id="skierNameInput" placeholder="Skier name">
+        <input id="skierNameInput" type="text" placeholder="Skier name">
         <select id="nationSelectForSkier"></select>
         <button onclick="createSkier()">Create</button>
       </div>
     </section>
 
-    <!-- Opdater / Slet løber (PUT + DELETE /skiers/{id}) -->
+    <!-- Opdater og slet løber -->
     <section class="card">
-      <h2>Opdater / Slet løber</h2>
+      <h2>Opdater og slet løber</h2>
       <div class="row">
         <select id="skierSelectForUpdate"></select>
-        <input type="text" id="skierUpdateNameInput" placeholder="New name">
+        <input id="skierUpdateNameInput" type="text" placeholder="New name">
         <select id="nationSelectForUpdate"></select>
         <button onclick="updateSkier()">Update</button>
         <button class="secondary" onclick="deleteSkier()">Delete</button>
@@ -54,8 +54,8 @@
     <section class="card">
       <h2>Opret konkurrence</h2>
       <div class="row">
-        <input type="text" id="competitionNameInput" placeholder="Competition name">
-        <input type="date" id="competitionDateInput">
+        <input id="competitionNameInput" type="text" placeholder="Competition name">
+        <input id="competitionDateInput" type="date">
         <button onclick="createCompetition()">Create</button>
       </div>
     </section>
@@ -65,21 +65,21 @@
       <h2>Opret run i konkurrence</h2>
       <div class="row">
         <select id="competitionSelectForRun"></select>
-        <input type="number" id="runNumberInput" placeholder="Run number">
+        <input id="runNumberInput" type="number" placeholder="Run number">
         <button onclick="createRun()">Create</button>
       </div>
     </section>
 
-    <!-- Registrér resultat (POST /results) -->
+    <!-- Registrer resultat -->
     <section class="card span-2">
-      <h2>Registrér resultat</h2>
-      <div class="row" style="margin-bottom: 10px;">
+      <h2>Registrer resultat</h2>
+      <div class="row">
         <select id="competitionSelectForRuns"></select>
       </div>
       <div class="row">
         <select id="runSelectForResult"></select>
         <select id="skierSelectForResult"></select>
-        <input type="number" step="0.01" id="timeSecondsInput" placeholder="Time (seconds)">
+        <input id="timeSecondsInput" type="number" step="0.01" placeholder="Time (seconds)">
         <button onclick="createResult()">Create</button>
       </div>
     </section>
@@ -119,7 +119,7 @@
       <ul id="skierList" class="list"></ul>
     </section>
 
-    <!-- Vis resultater + hurtigste løber for et run -->
+    <!-- Vis resultater og hurtigste for et run -->
     <section class="card">
       <h2>Resultater for et run</h2>
 
@@ -147,7 +147,7 @@
   </div>
 </div>
 
-<!-- JavaScript til hele UI (fetch, dropdowns, create/update/delete osv.) -->
+<!-- JavaScript til hele UI -->
 <script src="/js/app.js"></script>
 </body>
 </html>
